tests/NormalTests/paczka1/small_fuzzy/21823279.err
Error in line 4: ZGS0tQJ S676 45,4
Error in line 11: S36 A73 65,0
